--- a/tests/parm/global_control.nml.IN
+++ b/tests/parm/global_control.nml.IN
@@ -94,6 +94,7 @@
   agrid_vel_rst = .true.
   read_increment = @[READ_INCREMENT]
   res_latlon_dynamics = @[RES_LATLON_DYNAMICS]
+  ignore_rst_cksum = @[ATM_IGNORE_RST_CKSUM]
   increment_file_on_native_grid = @[INCREMENT_FILE_ON_NATIVE_GRID]
 /
 
@@ -229,8 +230,6 @@
   do_skeb      = @[DO_SKEB]
   iaufhrs      = @[IAUFHRS]
   iau_delthrs  = @[IAU_DELTHRS]
-  iau_inc_files= @[IAU_INC_FILES]
-  iau_drymassfixer = .false.
   use_med_flux = @[USE_MED_FLUX]
   frac_grid    = @[FRAC_GRID]
   cplchm       = @[CPLCHM]
@@ -405,6 +404,7 @@
 /
 
 &nam_stochy
+  STOCHINI=@[STOCHINI],
   skeb = @[SKEB]
   iseed_skeb = @[ISEED_SKEB]
   skeb_tau = @[SKEB_TAU]
@@ -412,10 +412,12 @@
   skebnorm = @[SKEBNORM]
   skeb_npass = @[SKEB_NPASS]
   skeb_vdof = @[SKEB_VDOF]
+  skebint = 1800
   shum = @[SHUM]
   iseed_shum = @[ISEED_SHUM]
   shum_tau = @[SHUM_TAU]
   shum_lscale = @[SHUM_LSCALE]
+  shumint = 3600
   sppt = @[SPPT]
   iseed_sppt = @[ISEED_SPPT]
   sppt_tau = @[SPPT_TAU]
@@ -423,6 +425,7 @@
   sppt_logit = @[SPPT_LOGIT]
   sppt_sfclimit = @[SPPT_SFCLIMIT]
   use_zmtnblck = @[USE_ZMTNBLCK]
+  spptint = 1800
   pbl_taper = @[PBL_TAPER]
   OCNSPPT = @[OCNSPPT]
   OCNSPPT_LSCALE = @[OCNSPPT_LSCALE]
@@ -449,4 +452,5 @@
   input_filename = '@[MOM6_RESTART_SETTING]'
   restart_input_dir = 'INPUT/',
   restart_output_dir = '@[MOM6_RESTART_DIR]'
-  parameter_filename = 'INPUT/MOM_input','INPUT/MOM_override'/
+  parameter_filename = 'INPUT/MOM_input','INPUT/MOM_override'
+/
