--- a/tests/rt.conf
+++ b/tests/rt.conf
@@ -27,6 +27,16 @@
 COMPILE | s2swa_32bit  | intel | -DAPP=S2SWA -D32BIT=ON -DCCPP_SUITES=FV3_GFS_v17_coupled_p8,FV3_GFS_v17_coupled_p8_ugwpv1 |          | fv3 |
 RUN | cpld_control_p8_mixedmode                         | - noaacloud                          | baseline |
 
+#GEFS
+RUN | cpld_control_gefs                                 | - noaacloud derecho                 | baseline |
+RUN | cpld_restart_gefs                                 | - noaacloud derecho                 |          | cpld_control_gefs
+RUN | cpld_dcp_gefs                                     | - noaacloud derecho wcoss2 acorn gaeac5 |          |
+#RUN | cpld_nothr_gefs                                   | - noaacloud derecho                 |          |
+#COMPILE | s2swa_32bit_debug | intel | -DAPP=S2SWA -DDEBUG=ON -D32BIT=ON -DCCPP_SUITES=FV3_GFS_v17_coupled_p8_ugwpv1 | | fv3 |
+#RUN | cpld_debug_gefs                                   | - noaacloud derecho                 | baseline |
+#COMPILE | s2swa_32bit_debug | gnu   | -DAPP=S2SWA -DDEBUG=ON -D32BIT=ON -DCCPP_SUITES=FV3_GFS_v17_coupled_p8_ugwpv1 | | fv3 |
+#RUN | cpld_debug_gefs                                   | - noaacloud derecho                | baseline |
+
 #GFS
 COMPILE | s2swa_32bit_pdlib  | intel | -DAPP=S2SWA -D32BIT=ON -DCCPP_SUITES=FV3_GFS_v17_coupled_p8_ugwpv1 -DPDLIB=ON | - noaacloud | fv3 |
 RUN | cpld_control_gfsv17                               | - noaacloud                          | baseline |
@@ -53,8 +63,6 @@ RUN | cpld_mpi_p8                                       | - noaacloud           
 RUN | cpld_control_ciceC_p8                             | - noaacloud                          | baseline |
 RUN | cpld_control_c192_p8                              | - wcoss2 jet acorn s4 noaacloud      | baseline |
 RUN | cpld_restart_c192_p8                              | - wcoss2 jet acorn s4 noaacloud      |          | cpld_control_c192_p8
-RUN | cpld_bmark_p8                                     | - s4 jet acorn noaacloud             | baseline |
-RUN | cpld_restart_bmark_p8                             | - s4 jet acorn noaacloud             |          | cpld_bmark_p8
 
 COMPILE | s2swal | intel | -DAPP=S2SWAL -DCCPP_SUITES=FV3_GFS_v17_coupled_p8,FV3_GFS_v17_coupled_p8_ugwpv1 | | fv3 |
 RUN | cpld_control_p8_lnd                               | - noaacloud wcoss2                   | baseline |
