fixed restart non-reproducing issue 2588 when using MERRA2 climatology + Add output of ocean scalar variables for quick diagnostics #2632 + Fix CICD Jenkinsfile change default RT suite to full #2628 (#2625)
* UFSWM - Add output of diagnostic ocean scalar variables: diag_table_cpld_sfs.IN
* UFSWM - Jenkinsfile update
  * FV3 - 
    * ccpp-physics -  a few of lines of code modified in aerinterp.F90

---------

Co-authored-by: sanAkel <santha.akella@gmail.com>
Co-authored-by: Bruce Kropp - Raytheon <104453151+BruceKropp-Raytheon@users.noreply.github.com>

--- a/.cicd/Jenkinsfile
+++ b/.cicd/Jenkinsfile
@@ -78,7 +78,7 @@ def generateStage(nodeLabel) {
 			    set +x
 
                             echo "Testing concluded...removing labels for $machine from $GIT_URL"
-                            echo "https://api.github.com/repos/${GIT_OWNER}/${GIT_REPO_NAME}/issues/${CHANGE_ID}/labels /{$machine-RT,$machine-BL}"
+                            echo "https://api.github.com/repos/${GIT_OWNER}/${GIT_REPO_NAME}/issues/${CHANGE_ID}/labels/{$machine-RT,$machine-BL}"
                             curl --silent -X DELETE -H "Accept: application/vnd.github.v3+json" -H "Authorization: Bearer ${GITHUB_TOKEN}"  https://api.github.com/repos/${GIT_OWNER}/${GIT_REPO_NAME}/issues/${CHANGE_ID}/labels/{$machine-RT,$machine-BL}
                         '''
                         currentBuild.result = 'FAILURE'
@@ -131,7 +131,7 @@ def generateStage(nodeLabel) {
 			    set +x
 
 			    echo "Testing concluded...removing label ${label} for ${machine} from ${GIT_URL}"
-			    echo "https://api.github.com/repos/${GIT_OWNER}/${GIT_REPO_NAME}/issues/${CHANGE_ID}/labels /${machine}-${label}"
+			    echo "https://api.github.com/repos/${GIT_OWNER}/${GIT_REPO_NAME}/issues/${CHANGE_ID}/labels/${machine}-${label}"
 			    curl --silent -X DELETE -H "Accept: application/vnd.github.v3+json" -H "Authorization: Bearer ${GITHUB_TOKEN}"  https://api.github.com/repos/${GIT_OWNER}/${GIT_REPO_NAME}/issues/${CHANGE_ID}/labels/{$machine-RT,$machine-BL}
 			'''
                 }
@@ -150,7 +150,7 @@ pipeline {
     parameters {
         booleanParam name: 'WM_BUILD', defaultValue: false, description: 'Whether to attempt to compile the model code tests'
         // Regression Test Suite ?
-        choice(name: 'WM_OPERATIONAL_TESTS', choices: ['default', 'control_p8', 'cpld_control_p8', 'comprehensive', 'rt.sh', 'none'], description: 'Specify the suite of tests to run')
+        choice(name: 'WM_OPERATIONAL_TESTS', choices: ['rt.conf', 'default', 'control_p8', 'cpld_control_p8', 'comprehensive', 'none'], description: 'Specify the suite of tests to run')
     }
     environment {
         ACCNR = 'epic'
