Update WW3 to sync develop through 20241220 commits  (#2621)
* UFSWM - Sync WW3 with develop through commits from 20241220 
  * WW3 -  Updated

--- a/tests/fv3_conf/cpld_control_run.IN
+++ b/tests/fv3_conf/cpld_control_run.IN
@@ -170,7 +170,7 @@ else
        cp ${FV3_IC}/ca_data*nc ./INPUT
        cp ${FV3_IC}/ufs.cpld.cpl*nc .
        ls -1 ufs.cpld.cpl*nc>rpointer.cpl
-       cp ${WAV_IC}/ufs.cpld.ww3.r.${RESTART_FILE_SUFFIX_SECS} .
+       cp ${WAV_IC}/ufs.cpld.ww3.r.${RESTART_FILE_SUFFIX_SECS}.nc .
      else
        # C48mx500 warm start from ICs
        cp    ${FV3_IC}/*.nc ./INPUT
