Add support for FV3 native grid (cubed sphere) to history and restart write netcdf routines + Add new cmake variable UFS_COMPILER_SUITE to support mixed Intel compilers (icx, icpx, ifort) #2504 (#2591)
* UFSWM - Add support for fv3atm native grid (cubed sphere) to history and restart write netcdf routines
* UFSWM - Add new cmake variable UFS_COMPILER_SUITE to support mixed Intel compilers (icx, icpx, ifort)
  * FV3 - Add support for native grid (cubed sphere) to history and restart write netcdf routines

---------

Co-authored-by: Dom Heinzeller <dom.heinzeller@icloud.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,7 +141,10 @@ else()
   set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Set type of build to Release." FORCE)
 endif()
 
-include(cmake/${CMAKE_Fortran_COMPILER_ID}.cmake)
+# Detect and set UFS_COMPILER_SUITE in detect_compiler_suite.cmake
+set(UFS_COMPILER_SUITE)
+include(cmake/detect_compiler_suite.cmake)
+include(cmake/${UFS_COMPILER_SUITE}.cmake)
 
 ###############################################################################
 ### Find Dependencies
