Update WW3  by merging develop  as of 2025-03-20 (#2669)
* UFSWM - updated ww3_shel.inp  
  * WW3 - update to top of develop of WW3 as of 2025-03-20

--- a/tests/parm/ww3_shel.nml.IN
+++ b/tests/parm/ww3_shel.nml.IN
@@ -19,3 +19,8 @@
   date%point%outffile  = '1'
   date%point%stride    = '@[WW3_DTPNT]'
 /
+&output_path_nml
+  path%grd_out = '@[WW3_GRD_OUTDIR]'
+  path%pnt_out = '@[WW3_PNT_OUTDIR]'
+  path%rst_out = '@[WW3_RST_OUTDIR]'
+/
