Add PIO configuration variables for CMEPS + Update CCPP framework and physics CMakeLists.txt; forward ccpp-framework to HEAD of main #2659 (#2695)
* UFSWM - add configuration variables to use CMEPS+PIO in UFS
* UFSWM - Update CCPP framework and physics CMakeLists.txt; forward ccpp-framework to HEAD of main
  * FV3 - Update CCPP framework and physics CMakeLists.txt; forward ccpp-framework to HEAD of main
    * ccpp-physics - Update CMakeLists.txt: use modern cmake, cleanup compiler flags, and fix OpenMP flags
    * ccpp-framework - Update src/CMakeLists.txt: use modern cmake features to install Fortran modules in the correct place

---------

Co-authored-by: Dom Heinzeller <dom.heinzeller@noaa.gov>

--- a/tests/parm/ufs.configure.atm_lnd.IN
+++ b/tests/parm/ufs.configure.atm_lnd.IN
@@ -27,6 +27,11 @@ MED_attributes::
   history_ymd = -999
   coupling_mode = @[CPLMODE]
   samegrid_atmlnd = @[samegrid_atmlnd]
+  pio_typename = @[CMEPS_PIO_FORMAT]
+  pio_numiotasks = @[CMEPS_PIO_IOTASKS]
+  pio_stride = @[CMEPS_PIO_STRIDE]
+  pio_rearranger = @[CMEPS_PIO_REARR]
+  pio_root = @[CMEPS_PIO_ROOT]
 ::
 
 # ATM #
