--- a/tests/parm/ufs.configure.datm_cdeps.IN
+++ b/tests/parm/ufs.configure.datm_cdeps.IN
@@ -104,7 +104,11 @@ MED_attributes::
       history_option = nhours
       history_ymd = -999
       coupling_mode = ufs.nfrac.aoflux
-      pio_rearranger = @[pio_rearranger]
+      pio_typename = @[CMEPS_PIO_FORMAT]
+      pio_numiotasks = @[CMEPS_PIO_IOTASKS]
+      pio_stride = @[CMEPS_PIO_STRIDE]
+      pio_rearranger = @[CMEPS_PIO_REARR]
+      pio_root = @[CMEPS_PIO_ROOT]
 ::
 
 ALLCOMP_attributes::
