--- a/tests/parm/ufs.configure.s2s_aoflux.IN
+++ b/tests/parm/ufs.configure.s2s_aoflux.IN
@@ -106,7 +106,11 @@ MED_attributes::
       ccpp_ini_file_prefix = 'INPUT/sfc_data.tile'
       ccpp_ini_layout = @[INPES],@[JNPES]
       ccpp_ini_read = false
-      pio_rearranger = @[pio_rearranger]
+      pio_typename = @[CMEPS_PIO_FORMAT]
+      pio_numiotasks = @[CMEPS_PIO_IOTASKS]
+      pio_stride = @[CMEPS_PIO_STRIDE]
+      pio_rearranger = @[CMEPS_PIO_REARR]
+      pio_root = @[CMEPS_PIO_ROOT]
       ocean_albedo_limit = @[ocean_albedo_limit]
 ::
 
