--- a/tests/parm/ufs.configure.s2sa.IN
+++ b/tests/parm/ufs.configure.s2sa.IN
@@ -107,7 +107,11 @@ MED_attributes::
       ICE_model = @[ice_model]
       OCN_model = @[ocn_model]
       coupling_mode = @[CPLMODE]
-      pio_rearranger = @[pio_rearranger]
+      pio_typename = @[CMEPS_PIO_FORMAT]
+      pio_numiotasks = @[CMEPS_PIO_IOTASKS]
+      pio_stride = @[CMEPS_PIO_STRIDE]
+      pio_rearranger = @[CMEPS_PIO_REARR]
+      pio_root = @[CMEPS_PIO_ROOT]
       ocean_albedo_limit = @[ocean_albedo_limit]
 ::
 
