--- a/tests/parm/ufs.configure.atm_lm4.IN
+++ b/tests/parm/ufs.configure.atm_lm4.IN
@@ -30,7 +30,11 @@ MED_attributes::
   history_tile_lnd = 96
   history_n_lnd_inst = 6
   history_option_lnd_inst = nhours
-  pio_rearranger = @[pio_rearranger]
+  pio_typename = @[CMEPS_PIO_FORMAT]
+  pio_numiotasks = @[CMEPS_PIO_IOTASKS]
+  pio_stride = @[CMEPS_PIO_STRIDE]
+  pio_rearranger = @[CMEPS_PIO_REARR]
+  pio_root = @[CMEPS_PIO_ROOT]
 ::
 
 # ATM #
