--- a/tests/parm/ufs.configure.atmw.IN
+++ b/tests/parm/ufs.configure.atmw.IN
@@ -74,7 +74,11 @@ MED_attributes::
       ATM_model = @[atm_model]
       WAV_model = @[wav_model]
       coupling_mode = @[CPLMODE]
-      pio_rearranger = @[pio_rearranger]
+      pio_typename = @[CMEPS_PIO_FORMAT]
+      pio_numiotasks = @[CMEPS_PIO_IOTASKS]
+      pio_stride = @[CMEPS_PIO_STRIDE]
+      pio_rearranger = @[CMEPS_PIO_REARR]
+      pio_root = @[CMEPS_PIO_ROOT]
 ::
 
 ALLCOMP_attributes::
