--- a/tests/parm/ufs.configure.hafs_atm_ocn_wav_mom6.IN
+++ b/tests/parm/ufs.configure.hafs_atm_ocn_wav_mom6.IN
@@ -29,7 +29,11 @@ MED_attributes::
   coupling_mode = @[CPLMODE]
   normalization = none
   merge_type = copy
-  pio_rearranger = @[pio_rearranger]
+  pio_typename = @[CMEPS_PIO_FORMAT]
+  pio_numiotasks = @[CMEPS_PIO_IOTASKS]
+  pio_stride = @[CMEPS_PIO_STRIDE]
+  pio_rearranger = @[CMEPS_PIO_REARR]
+  pio_root = @[CMEPS_PIO_ROOT]
   ocn_use_data_first_import = .true.
   wav_use_data_first_import = .true.
 ::
