--- a/tests/parm/ufs.configure.s2swal_fast.IN
+++ b/tests/parm/ufs.configure.s2swal_fast.IN
@@ -175,7 +175,11 @@ MED_attributes::
       WAV_model = @[wav_model]
       LND_model = @[lnd_model]
       coupling_mode = @[CPLMODE]
-      pio_rearranger = @[pio_rearranger]
+      pio_typename = @[CMEPS_PIO_FORMAT]
+      pio_numiotasks = @[CMEPS_PIO_IOTASKS]
+      pio_stride = @[CMEPS_PIO_STRIDE]
+      pio_rearranger = @[CMEPS_PIO_REARR]
+      pio_root = @[CMEPS_PIO_ROOT]
       ocean_albedo_limit = @[ocean_albedo_limit]
 ::
 
