Update mom6 to its main repository 20250411 commit (#2697)
* UFSWM - move llvm test on hercules to gaea c5
  * MOM6 - update MOM6 to its main repo. 20250411 (NCAR-20250225 PR) commit
  * stochastic_physics - update to stochastic_physics latest version which contains SKEB normalization feature

--- a/tests/rt.conf
+++ b/tests/rt.conf
@@ -380,11 +380,11 @@ COMPILE | hafsw_debug             | intelllvm | -DAPP=HAFSW -DMOVING_NEST=ON -DC
 RUN | hafs_regional_storm_following_1nest_atm_ocn_debug | + orion                              | baseline |
 
 # DATM/CDEPS tests on Hercules
-COMPILE | datm_cdeps              | intelllvm | -DAPP=NG-GODAS            | + hercules | fv3 |
-RUN | datm_cdeps_control_cfsr                           | + hercules                           | baseline |
+COMPILE | datm_cdeps              | intelllvm | -DAPP=NG-GODAS            | + gaeac5 | fv3 |
+RUN | datm_cdeps_control_cfsr                           | + gaeac5                           | baseline |
 
-COMPILE | datm_cdeps_debug        | intelllvm | -DAPP=NG-GODAS -DDEBUG=ON | + hercules | fv3 |
-RUN | datm_cdeps_debug_cfsr                             | + hercules                           | baseline |
+COMPILE | datm_cdeps_debug        | intelllvm | -DAPP=NG-GODAS -DDEBUG=ON | + gaeac5 | fv3 |
+RUN | datm_cdeps_debug_cfsr                             | + gaeac5                           | baseline |
 
 
 
