--- a/.github/workflows/aux.yml
+++ b/.github/workflows/aux.yml
@@ -15,7 +15,7 @@ env:
 jobs:
   pre:
     name: Preprocess
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Share helper id
@@ -28,7 +28,7 @@ jobs:
 
   repocheck:
     name: Repo check
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Check up-to-dateness and post comment
