Add CMEPS log file at restart write; IAU Tags for Global Workflow (was #2674) (#2698)
* UFSWM - add log writing capability to ufs/cdeps_share
* UFSWM - Add @[HIDE_IAU] and @[HIDE_LIAU] tags as needed in global_control.nml.IN
 * CMEPS - add call to log_restart_fh in in the mediator restart phase

---------

Co-authored-by: dpsarmie <Daniel.Sarmiento@noaa.gov>

--- a/tests/parm/global_control.nml.IN
+++ b/tests/parm/global_control.nml.IN
@@ -228,8 +228,6 @@
   do_sppt      = @[DO_SPPT]
   do_shum      = @[DO_SHUM]
   do_skeb      = @[DO_SKEB]
-  iaufhrs      = @[IAUFHRS]
-  iau_delthrs  = @[IAU_DELTHRS]
   use_med_flux = @[USE_MED_FLUX]
   frac_grid    = @[FRAC_GRID]
   cplchm       = @[CPLCHM]
@@ -257,22 +255,24 @@
   pert_mp = @[PERT_MP]
   pert_radtend = @[PERT_RADTEND]
   pert_clds = @[PERT_CLDS]
-  iau_inc_files= @[IAU_INC_FILES]
-  iau_drymassfixer = .false.
-  iau_filter_increments = @[IAU_FILTER_INCREMENTS]
+@[HIDE_AIAU] iaufhrs      = @[IAUFHRS]
+@[HIDE_AIAU] iau_delthrs  = @[IAU_DELTHRS]
+@[HIDE_AIAU] iau_inc_files= @[IAU_INC_FILES]
+@[HIDE_AIAU] iau_drymassfixer = .false.
+@[HIDE_AIAU] iau_filter_increments = @[IAU_FILTER_INCREMENTS]
 /
 
 &land_iau_nml
   do_land_iau = @[DO_LAND_IAU]
-  land_iau_fhrs = @[LAND_IAU_FHRS]
-  land_iau_delthrs = @[LAND_IAU_DELHRS]
-  land_iau_inc_files = @[LAND_IAU_INC_FILES]
-  lsoil_incr = @[LSOIL_INCR]
-  land_iau_filter_increments = @[LAND_IAU_FILTER_INC]
-  land_iau_upd_stc = @[LAND_IAU_UPD_STC]
-  land_iau_upd_slc = @[LAND_IAU_UPD_SLC]
-  land_iau_do_stcsmc_adjustment = @[LAND_IAU_DP_STCSMC_ADJ]
-  land_iau_min_T_increment = @[LAND_IAU_MIN_T_INC]
+@[HIDE_LIAU] land_iau_fhrs = @[LAND_IAU_FHRS]
+@[HIDE_LIAU] land_iau_delthrs = @[LAND_IAU_DELHRS]
+@[HIDE_LIAU] land_iau_inc_files = @[LAND_IAU_INC_FILES]
+@[HIDE_LIAU] lsoil_incr = @[LSOIL_INCR]
+@[HIDE_LIAU] land_iau_filter_increments = @[LAND_IAU_FILTER_INC]
+@[HIDE_LIAU] land_iau_upd_stc = @[LAND_IAU_UPD_STC]
+@[HIDE_LIAU] land_iau_upd_slc = @[LAND_IAU_UPD_SLC]
+@[HIDE_LIAU] land_iau_do_stcsmc_adjustment = @[LAND_IAU_DP_STCSMC_ADJ]
+@[HIDE_LIAU] land_iau_min_T_increment = @[LAND_IAU_MIN_T_INC]
 /
 
 &cires_ugwp_nml
