CMake Atmosphere Dycore Generalization + Fix for JEDI cubed sphere grid #2708 (#2604)
* UFSWM:
  * reorganize project structure to allow multiple dycores. Isolate FV3 dycore. cmake-atmosphere-generalization branch. Reorganize project structure to allow multiple dycores.
  * Fix for JEDI cubed sphere grid.
* FV3:
  * Reorganize project structure to allow multiple dycores. Isolate FV3 dycore. Some more reorganization to isolate the FV3 dycore coupling.
  * Fix for JEDI cubed sphere grid.

---------

Co-authored-by: dustinswales <dustinswales@users.noreply.github.com>
Co-authored-by: Dusan Jovic <dusan.jovic@noaa.gov>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ include(cmake/configure_apps.cmake)
 
 message("")
 message("FMS .............. ${FMS}")
-message("FV3 .............. ${FV3}")
+message("FV3_dy ........... ${FV3}")
 message("AQM .............. ${AQM}")
 message("GOCART ........... ${UFS_GOCART}")
 message("MOM6 ............. ${MOM6}")
@@ -193,6 +193,11 @@ endif()
 
 ###############################################################################
 ### Atmosphere Components [FV3, MPAS?]
+### DJS2024: There will be a generalized atmospheric component with multiple
+###          dycores, not multiple atmospheric components (one for each dycore).
+###          So, - rename the atmospheric component FV3 to UFSATM or ATM, then
+###              - if FV3 or MPAS, add_sudirectory(UFSATM or ATM)
+###
 ###############################################################################
 if(FV3)
   add_subdirectory(FV3)
@@ -321,9 +326,9 @@ if(STOCH_PHYS)
 endif()
 
 if(FV3)
-  add_dependencies(ufs fv3atm)
-  list(APPEND _ufs_defs_private FRONT_FV3=fv3atm_cap_mod)
-  list(APPEND _ufs_libs_public fv3atm)
+  add_dependencies(ufs ufsatm_fv3)
+  list(APPEND _ufs_defs_private FRONT_FV3=${DYCORE_TARGET_CAP_MOD})
+  list(APPEND _ufs_libs_public ${DYCORE_TARGET})
 endif()
 
 if(MOM6)
